--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,4 +20,4 @@ jobs:
           projectId: power-search-8e45f
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_POWER_SEARCH_8E45F }}
+          REACT_APP_SERVICE_ACCT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_POWER_SEARCH_8E45F }}
